Modularize example program in `junit-source-launcher`
Get rid of `--add-modules org.junit.start` but introduce
more structural configuration, like a `module-info.java`
file and an `example` package, and also an explicit class
declaration - as compact source file cannot reside in a
named package.